# asteroid-arena-2d

./: CMakeLists.txt  README.md
main/: config.cpp  config.h  game_init.cpp  main.cpp
math/: game_math.h  point2d.cpp  point2d.h  vector2d.cpp  vector2d.h
objects/: asteroid.cpp  asteroid.h  blackhole.cpp  blackhole.h  bullet.h  game_arena.cpp  game_arena.h  game_object.cpp  game_object.h  particle.cpp  particle.h  spaceship.cpp  wall.cpp  wall.h
utilities/: collision_handler.cpp  collision_handler.h  game_manager.cpp  game_manager.h  game_ui.cpp  game_ui.h  input_handler.cpp  input_handler.h  object_register.cpp  object_register.h  particle_system.cpp
